<resources>
    <string name="app_name">Bluetooth</string>
    <string name="BtDialerLabel">Вызов</string>
    <string name="BtPhonebookLabel">Контакты</string>
    <string name="BtCallHistoryLabel">История</string>
    <string name="BtSmsLabel">SMS</string>
    <string name="BtMusicLabel">Музыка</string>
    <string name="BtPairedHistoryLabel">История сопряжений</string>
    <string name="BtSettingsLabel">Настройки</string>
    <string name="BtReturnLabel">Назад</string>
    <string name="bt_settings_text">Нет подключения</string>
    <string name="open_bt_string">Bluetooth выключен</string>
    <string name="close_bt_string">Bluetooth включен</string>
    <string name="scan_btdevice_string">Сканирование</string>
    <string name="discovery_bt_string">Доступен</string>
    <string name="indiscovery_bt_string">Недоступен</string>
    <string name="trypair_bt_string">Сопряжение</string>
    <string name="dispair_bt_string">Отменить сопряжение</string>
    <string name="connect_bt_string">Подключить</string>
    <string name="disconnect_bt_string">Отключить</string>
    <string name="bt_pairconnect_return">Назад</string>
    <string name="bt_status_unpair">Не подключены</string>
    <string name="bt_status_paired">Подключены</string>
    <string name="bt_status_connecting">Подключение</string>
    <string name="bt_status_connected">Подключен</string>
    <string name="autoanswer_bt_string">Автоматический ответ</string>
    <string name="non_autoanswer_bt_string">Неавтоматический ответ</string>
    <string name="autoconnect_bt_string">Автоподключение</string>
    <string name="non_autoconnect_bt_string">Неавтоматическое подключение</string>
    <string name="edit_bt_string">Информация об устройстве</string>
    <string name="localname_string">Редактировать имя</string>
    <string name="pin_string">Изменить контакт</string>
    <string name="received_string">Получено</string>
    <string name="dialed_string">Набранные</string>
    <string name="missed_string">Пропущенные</string>
    <string name="history_all_string">Все звонки</string>
    <string name="str_download_history">Загрузка ...%d</string>
    <string name="str_download_phonebook">Загрузка ...%d</string>
    <string name="str_download_wait_history_tip">Загрузка истории звонков, подождите ...</string>
    <string name="str_download_wait_phonebook_tip">Загрузка телефонной книги, подождите ...</string>
    <string name="str_loading_record">Загрузка ...</string>
    <string name="str_call_info">Не подключен</string>
    <string name="str_clear_all">Очистить</string>
    <string name="str_call">Вызов</string>
    <string name="str_btn_recall">Сброс</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_0">0</string>
    <string name="str_pound">\#</string>
    <string name="str_asterisk">*</string>
    <string name="str_Enter">Войти</string>
    <string name="str_Delete">Удалить</string>
    <string name="str_Return">Вернуть</string>
    <string name="str_volume">10</string>
    <string name="str_title_paired">Список устройств</string>
    <string name="none_paired">Нет сопряженных устройств</string>
    <string name="bt_turning_on">Включение Bluetooth</string>
    <string name="bt_turned_on">Bluetooth включен</string>
    <string name="bt_turning_off">Выключение Bluetooth</string>
    <string name="bt_turned_off">Bluetooth выключен</string>
    <string name="bt_turn_error">Ошибка включения Bluetooth</string>
    <string name="bt_discoverable">Доступен для поиска по Bluetooth</string>
    <string name="bt_discoverable_false">Недоступен для поиска по Bluetooth</string>
    <string name="bluetooth_error_title">Внимание</string>
    <string name="str_bluetooth_phone_not_connected">Не подключайтесь к устройству Bluetooth</string>
    <string name="str_handsfree_device_connected">Устройство громкой связи подключено</string>
    <string name="str_handsfree_device_disconnected">Устройство громкой связи отключено</string>
    <string name="str_no_memory_call_record">Нет записи вызова памяти</string>
    <string name="str_call_number_is_empty">Номер вызова пуст</string>
    <string name="str_call_number_is_too_long">Номер вызова не может быть длиннее 64</string>
    <string name="str_no_mach_number">Нет совпадающего номера</string>
    <string name="str_income_call_status">Входящий звонок</string>
    <string name="str_out_call_status">Исходящий вызов</string>
    <string name="str_bt_call_active">Входящий</string>
    <string name="str_bt_call_inactive">Завершение вызова</string>
    <string name="str_bt_call_end">Завершение звонка</string>
    <string name="str_bt_call_softkeypad">Клавиатура</string>
    <string name="str_bt_call_answer">Ответ</string>
    <string name="str_bt_call_carsound">Автомобиль</string>
    <string name="str_bt_call_phonesound">Телефон</string>
    <string name="str_calling_phone_number">10086</string>
    <string name="a2dp_status_title">A2DP</string>
    <string name="a2dpsink_status_connected_info">подключен</string>
    <string name="a2dpsink_status_notconnected_info">не подключен</string>
    <string name="a2dpsink_status_connecting_info">подключение</string>
    <string name="a2dpsink_status_disconnecting_info">разъединение</string>
    <string name="avrcp_status_title">AVRCP</string>
    <string name="avrcp_status_info">Не подключен</string>
    <string name="str_have_rds_can_not_play">RDS не может играть</string>
    <string name="str_have_rds_can_not_dial">Не удается установить RDS</string>
    <string name="disconnecta2dp">discA2DP</string>
    <string name="disconnectavrcp">discAVRCP</string>
    <string name="avrcpct_status_connected_info">подключен</string>
    <string name="avrcpct_status_notconnected_info">не подключен</string>
    <string name="avrcpct_status_connecting_info">подключение</string>
    <string name="avrcpct_status_disconnecting_info">разъединие</string>
    <string name="bluetooth_connected">Подключен</string>
    <string name="bluetooth_disconnected">Отключен</string>
    <string name="bluetooth_disconnecting">Отключение ...</string>
    <string name="bluetooth_connecting">Подключение ...</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Подключить к этому устройству</string>
    <string name="bluetooth_pairing">Сопряжение ...</string>
    <string name="bluetooth_paired">Сопряжен, но не подключен</string>
    <string name="bluetooth_preference_scan_title">Сканирование устройств</string>
    <string name="bluetooth_options_menu_refresh">Обновить</string>
    <string name="bluetooth_device_context_rename">Переименовать</string>
    <string name="bluetooth_device_context_rename_edittext">rename_edittext</string>
    <string name="bluetooth_device_context_connect">Соединить</string>
    <string name="bluetooth_device_context_disconnect">Отключить</string>
    <string name="bluetooth_device_context_pair_connect">Подключиться</string>
    <string name="bluetooth_device_context_pair">Подключить</string>
    <string name="bluetooth_device_context_unpair">Разорвать сопряжение</string>
    <string name="bluetooth_device_context_disconnect_unpair">Отключить и разорвать сопряжение</string>
    <string name="bluetooth_device_context_connect_advanced">Опции…</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="bluetooth_connecting_error_message">Не удалось подключиться к %1$s.</string>
    <string name="bluetooth_device">гарнитура/наушники</string>
    <string name="bluetooth_disconnect_blank">%1$s будет отключен.</string>
    <string name="bluetooth_pairing_error_message">Проблема сопряжения с %1$s.</string>
    <string name="bluetooth_pairing_pin_error_message">Проблемасопряжения с %1$s, поскольку PIN-код или пароль неверны.</string>
    <string name="bluetooth_pairing_device_down_error_message">Не удается установить связь с %1$s.</string>
    <string name="bluetooth_pairing_rejected_error_message">Сопряжение отклонено %1$s.</string>
    <string name="bluetooth_remote_device">устройство Bluetooth</string>
    <string name="bt_device_name_title">Имя устройства Bluetooth:</string>
    <string name="bt_device_name_text">MTK Bluetooth</string>
    <string name="bt_device_pin_title">PIN для устройства Bluetooth:</string>
    <string name="bt_device_pin_text">1234</string>
    <string name="bt_device_info">Информация об устройстве</string>
    <string name="str_edit_ok">ОК</string>
    <string name="str_edit_cancel">Отмена</string>
    <string name="bt_phonebook_pause_string">Пауза</string>
    <string name="bt_callhistory_pause_string">Пауза</string>
    <string name="bt_phonebook_continue_string">Продолжить</string>
    <string name="bt_callhistory_continue_string">Продолжить</string>
    <string name="bt_phonebook_syn_string">Синхронизировать</string>
    <string name="bt_callhistory_syn_string">Синхронизировать</string>
    <string name="bt_phonebook_search_hint">Всего %d контактов</string>
    <string name="phonebook_unknow_name">Неизвестный</string>
    <string name="bt_notsupport_download_phonebook">Не поддерживает загрузку телефонной книги</string>
    <string name="bt_not_support_downlaod_callhistory">Не поддерживает загрузку тистории звонков</string>
    <string name="bt_phonebook_call_string">Вызов</string>
    <string name="bt_callhistory_call_string">Вызов</string>
    <string name="pair_btdevice_string">сопряжение</string>
    <string name="unpair_btdevice_string">удалить</string>
    <string name="connect_btdevice_string">подключить</string>
    <string name="disconnect_btdevice_string">отключить</string>
    <string name="device_name_string">Имя устройства</string>
    <string name="device_pin_string">PIN устройства</string>
    <string name="autoanswer_string">Автоматический ответ</string>
    <string name="autoanswer_on_string">Вкл</string>
    <string name="autoanswer_off_string">Выкл</string>
    <string name="autoconnect_string">Автосоединение</string>
    <string name="autoconnect_on_string">Вкл</string>
    <string name="autoconnect_off_string">Выкл</string>
    <string name="paired_devices_string">Сопряженные устройства</string>
    <string name="usable_devices_string">Используемые устройства</string>
    <string name="bluetooth_pbap_server_auth_chall_notify_ticker">Запрос на аутентификацию Bluetooth PBAP</string>
    <string name="bluetooth_pbap_server_auth_chall_notify_title">Запрос на аутентификацию Bluetooth PBAP</string>
    <string name="bluetooth_pbap_server_auth_chall_message">Запрос аутентификации PBAP от %1$s</string>
    <string name="auth_ok">ОК</string>
    <string name="auth_cancel">ОТМЕНА</string>
    <string name="auth_passcode">пароль</string>
    <string name="bluetooth_hf_connect_toast">Сначала подключите Bluetooth</string>
    <string name="action_call_title">Вызов</string>
    <string name="bluetooth_device_info_toast">Имя устройства не может быть пустым, а длина пин-кода не должна быть меньше 4</string>
    <string name="str_bt_not_available">Bluetooth еще не доступен</string>
    <string name="str_connecting_a2dp_avrcp">Подключение A2DP или AVRCP ...</string>
    <string name="str_connect_hf">Сначала подключите HFP</string>
    <string name="str_connect_a2dp_avrcp">Подключите A2DP и ​​AVRCP</string>
    <string name="str_music_title">Название музыки</string>
    <string name="str_music_album">Музыкальный альбом</string>
    <string name="str_music_artist">Музыкальный исполнитель</string>
    <string name="bt_sms_unread">Непрочитанные SMS</string>
    <string name="bt_sms_readed">Прочитанные SMS</string>
    <string name="bt_sms_draft">Черновик</string>
    <string name="bt_sms_sented">Отправленные SMS</string>
</resources>