<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/bt_calling_view" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="40.0dip">
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_gravity="center" android:id="@id/bt_calling_status_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_out_call_status" />
        <ImageView android:layout_gravity="center" android:id="@id/bt_calling_image" android:background="@drawable/picture_unknown" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:adjustViewBounds="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/bt_calling_phone_number" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:singleLine="true" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="4.0dip">
            <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:gravity="bottom|center" android:id="@id/btn_voiceswitch_car" android:background="@xml/bg_call_carsound_btn" android:layout_width="114.0dip" android:layout_height="64.0dip" android:layout_margin="4.0dip" android:text="@string/str_bt_call_carsound" />
            <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:gravity="bottom|center" android:id="@id/btn_voiceswitch_phone" android:background="@xml/bg_call_phonesound_btn" android:visibility="gone" android:layout_width="114.0dip" android:layout_height="64.0dip" android:layout_margin="4.0dip" android:text="@string/str_bt_call_phonesound" />
            <Button android:textSize="12.0dip" android:textColor="#ff00ff00" android:gravity="bottom|center" android:id="@id/btn_answer" android:background="@xml/bg_call_answer_btn" android:visibility="gone" android:layout_width="114.0dip" android:layout_height="64.0dip" android:layout_margin="4.0dip" android:text="@string/str_bt_call_answer" />
            <Button android:textSize="12.0dip" android:textColor="#ffff0000" android:gravity="bottom|center" android:id="@id/btn_hangup" android:background="@xml/bg_call_hangup_btn" android:layout_width="114.0dip" android:layout_height="64.0dip" android:layout_margin="4.0dip" android:text="@string/str_bt_call_end" />
            <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:gravity="bottom|center" android:id="@id/btn_softkeypad" android:background="@xml/bg_call_keypad_btn" android:layout_width="114.0dip" android:layout_height="64.0dip" android:layout_margin="4.0dip" android:text="@string/str_bt_call_softkeypad" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/calling_softkeypad" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="46.0dip" android:layout_marginRight="2.0dip">
        <EditText android:textSize="24.0dip" android:textColor="#ff000000" android:layout_gravity="center_vertical" android:id="@id/calling_input_et" android:background="@drawable/bt_call_inputbox_bg" android:layout_width="285.0dip" android:layout_height="54.0dip" android:layout_marginLeft="2.0dip" android:layout_marginBottom="8.0dip" android:singleLine="true" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <TableLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_one" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_1" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_two" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_2" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_three" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_3" />
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_four" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_4" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_five" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_5" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_six" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_6" />
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_seven" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_7" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_eight" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_8" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_nine" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_9" />
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_zero" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_0" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_asterisk" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_asterisk" />
                    <Button android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/btn_calling_pound" android:background="@xml/bg_softkeypad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/str_pound" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>