<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/edit_namepin_ll" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/bt_device_name_title" />
    <EditText android:scrollbarAlwaysDrawVerticalTrack="true" android:textSize="40.0dip" android:id="@id/bt_device_name_et" android:layout_width="400.0dip" android:layout_height="80.0dip" android:layout_margin="10.0dip" android:text="@string/bt_device_name_text" android:lines="2" android:maxLength="248" android:inputType="textMultiLine" android:imeOptions="flagNoExtractUi" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
        <Button android:textSize="20.0dip" android:textColor="@color/btn_textview" android:id="@id/btn_edit_name_ok" android:background="@drawable/btn_180_50_bg" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/str_edit_ok" />
        <Button android:textSize="20.0dip" android:textColor="@color/btn_textview" android:id="@id/btn_edit_name_cancel" android:background="@drawable/btn_180_50_bg" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:text="@string/str_edit_cancel" />
    </LinearLayout>
</LinearLayout>